@@ -1,3 +1,4 @@
+* FEA#7015 Ajout d'une fonction technique pour ajouter une condition de lecture seule sur tous les champs d'un modèle
 * BUG#6993 Suppression de l'import simplejson
 * BUG#6475 Le troisiéme paramètre de coog-daily est maintenante un argument facultatif qui représente TODAY_DATE
 * FEA#6936 Ajout d'un nouveau paramètre d'exécution de batch pour interdire le split
