@@ -1,3 +1,4 @@
+* FEA#7015 Add a technical function to set a readonly condition on all fields of a model
 * BUG#6993 Removing simple json import
 * BUG#6475 The third parameter of coog-daily is now an optional argument which represents TODAY_DATE.
 * FEA#6936 Add a batch parameter to avoid systematic split
